[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "*"
rand = "*"


bitflags = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui ={ version = "*", default-features = false, features = ["crossterm", "serde"]}
chrono = { version = "*", features = ["serde"]}